# mch2022-firmware-esp32

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  build_efuse.sh  clean.sh  command.sh  erase.sh  flash.sh  flash_efuse.sh  generate_version_header.sh  install.sh  menuconfig.sh  monitor.sh  partitions.csv  partitions.ods  qemu.sh  sdkconfig
.github/workflows/: cd-release.yml  cd.yml  ci-build.yml  rp2040-fw-release.yml
bootloader_components/main/: CMakeLists.txt  appfs_flashfunctions_wrapper.h  bootloader_start.c
components/appfs/: appfs.h
components/driver_fsoverbus/: CMakeLists.txt  Kconfig  appfsfunctions.c  backend.c  driver_fsoverbus.c  filefunctions.c  packetutils.c  project_include.cmake  specialfunctions.c  uart_backend.c  uartnaive_backend.c
components/driver_fsoverbus/include/: appfsfunctions.h  driver_fsoverbus.h  filefunctions.h  functions.h  packetutils.h  specialfunctions.h
components/gui-toolkit/: CMakeLists.txt  graphics_wrapper.c  gui_element_header.c  menu.c
components/gui-toolkit/include/: graphics_wrapper.h  gui_element_header.h  menu.h
components/i2c-bme680/: CMakeLists.txt  bme680.c
components/i2c-bme680/include/: bme680.h
components/i2c-ssd1306/: CMakeLists.txt  README.md  ssd1306.c
components/i2c-ssd1306/include/: ssd1306.h
components/mch2022-bsp/: CMakeLists.txt  hardware.c  hardware.h  rp2040.c  rp2040.h
components/mch2022-efuse/: CMakeLists.txt  efuse.c  esp_efuse_custom_table.c  esp_efuse_custom_table.csv
components/mch2022-efuse/include/: efuse.h  esp_efuse_custom_table.h
components/renze-graphics/: CMakeLists.txt  driver_framebuffer.cpp  driver_framebuffer_dirty.cpp  driver_framebuffer_drawing.cpp  driver_framebuffer_orientation.cpp  driver_framebuffer_window.cpp
components/renze-graphics/include/: driver_framebuffer.h  driver_framebuffer_compositor.h  driver_framebuffer_devices.h  driver_framebuffer_internal.h
components/ws2812/: CMakeLists.txt  ws2812.c
components/ws2812/include/: ws2812.h
efuse/: CMakeLists.txt  burn.sh  partitions.csv  sdkconfig
efuse/main/: CMakeLists.txt  main.c
factory_test/: .gitignore  CMakeLists.txt  partitions.csv  partitions.ods  sdkconfig
factory_test/bootloader_components/main/: appfs_flashfunctions_wrapper.c
factory_test/components/appfs/: CMakeLists.txt  appfs.c  appfs.h
factory_test/components/appfs/include/: appfs.h
factory_test/components/renze-graphics/: component.mk  driver_framebuffer_text.cpp
factory_test/components/renze-graphics/include/: driver_framebuffer_text.h
factory_test/main/: CMakeLists.txt  bitstream.h  bitstream2.h  hardware.c  hardware.h  logo.h  main.c
fpga/: fpga.py
main/: CMakeLists.txt  adc_test.c  animation.c  app_management.c  app_update.c  appfs_wrapper.c  audio.c  bootscreen.c  button_test.c  button_wrapper.c  factory_test.c  file_browser.c  filesystems.c  fpga.h  fpga_download.c  fpga_test.c  fpga_util.c  graphics_wrapper.c  hatchery.c  hatchery_client.c  http_download.c  main.c  menu.c  metadata.c  metadata.h  msc.c  nametag.c  pax_keyboard.c  rp2040_updater.c  rp2040firmware.h  rtc_memory.c  sao_eeprom.c  selftest.h  settings.c  system_wrapper.c  terminal.c  test_common.c  uninstall.c  webusb.c  wifi_cert.c  (+5 more)
main/include/: .graphics_wrapper.h.kate-swp  adc_test.h  animation.h  app_management.h  app_update.h  appfs_wrapper.h  audio.h  bootscreen.h  button_message.h  button_test.h  button_wrapper.h  factory_test.h  file_browser.h  filesystems.h  fpga_download.h  fpga_test.h  fpga_util.h  graphics_wrapper.h  hatchery_client.h  http_download.h  menu.h  metadata.h  msc.h  nametag.h  pax_keyboard.h  rp2040_firmware.h  rp2040_updater.h  rtc_memory.h  sao_eeprom.h  settings.h  system_wrapper.h  terminal.h  test_common.h  uninstall.h  webusb.h  wifi_cert.h  wifi_connect.h  wifi_connection.h  wifi_defaults.h  wifi_ota.h  (+1 more)
main/menus/: dev.c  dev.h  hatchery.c  hatchery.h  ir.c  ir.h  launcher.c  launcher.h  launcher_esp32.c  launcher_esp32.h  launcher_fpga.c  launcher_fpga.h  launcher_python.c  launcher_python.h  python.c  python.h  sao.c  sao.h  settings.c  settings.h  start.c  start.h  wifi.c  wifi.h
resources/: boot.snd  custom_ota_cert.pem
tools/: README.md  test.py  uart_fpga.py  webusb.py  webusb_boot.py  webusb_fat_ls.py  webusb_fat_push.py  webusb_fpga.py  webusb_ls.py  webusb_push.py  webusb_rm.py
