idf_component_register(
    SRCS "main.c"
         "appfs_wrapper.c"
         "fpga_test.c"
         "graphics_wrapper.c"
         "menu.c"
         "rp2040_updater.c"
         "settings.c"
         "system_wrapper.c"
         "wifi_ota.c"
         "hatchery_client.c"
         "fpga_download.c"
         "audio.c"
         "bootscreen.c"
         "menus/launcher.c"
         "menus/hatchery.c"
         "menus/settings.c"
         "menus/start.c"
         "menus/dev.c"
         "menus/wifi.c"
         "menus/sao.c"
         "uninstall.c"
         "file_browser.c"
         "test_common.c"
         "factory_test.c"
         "animation.c"
         "button_test.c"
         "adc_test.c"
         "webusb.c"
         "wifi_test.c"
         "sao_eeprom.c"
    INCLUDE_DIRS "."
                 "include"
                 "menus"
    EMBED_TXTFILES ${project_dir}/resources/isrgrootx1.pem
    EMBED_FILES ${project_dir}/resources/wallpaper.png
                ${project_dir}/resources/fpga_selftest.bin
                ${project_dir}/resources/rp2040_firmware.bin
                ${project_dir}/resources/boot.snd
                ${project_dir}/resources/mch2022_logo.png
                ${project_dir}/resources/logo_screen.png
                ${project_dir}/resources/icons/dev.png
                ${project_dir}/resources/icons/home.png
                ${project_dir}/resources/icons/settings.png
                ${project_dir}/resources/icons/apps.png
                ${project_dir}/resources/icons/hatchery.png
                ${project_dir}/resources/animation/animation_frame_1.png
                ${project_dir}/resources/animation/animation_frame_2.png
                ${project_dir}/resources/animation/animation_frame_3.png
                ${project_dir}/resources/animation/animation_frame_4.png
                ${project_dir}/resources/animation/animation_frame_5.png
                ${project_dir}/resources/animation/animation_frame_6.png
                ${project_dir}/resources/animation/animation_frame_7.png
                ${project_dir}/resources/animation/animation_frame_8.png
                ${project_dir}/resources/animation/animation_frame_9.png
                ${project_dir}/resources/animation/animation_frame_10.png
                ${project_dir}/resources/animation/animation_frame_11.png
                ${project_dir}/resources/animation/animation_frame_12.png
                ${project_dir}/resources/animation/animation_frame_13.png
                ${project_dir}/resources/animation/animation_frame_14.png
                ${project_dir}/resources/animation/animation_frame_15.png
                ${project_dir}/resources/animation/animation_frame_16.png
                ${project_dir}/resources/animation/animation_frame_17.png
                ${project_dir}/resources/animation/animation_frame_18.png
                ${project_dir}/resources/animation/animation_frame_19.png
                ${project_dir}/resources/animation/animation_frame_20.png
                ${project_dir}/resources/animation/animation_frame_21.png
                ${project_dir}/resources/animation/animation_frame_22.png
                ${project_dir}/resources/animation/animation_frame_23.png
                ${project_dir}/resources/animation/animation_frame_24.png
                ${project_dir}/resources/animation/animation_frame_25.png
                ${project_dir}/resources/animation/animation_frame_26.png
                ${project_dir}/resources/animation/animation_frame_27.png
                ${project_dir}/resources/animation/animation_frame_28.png
)
