idf_component_register(
    SRCS "driver_framebuffer.cpp"
         "driver_framebuffer_dirty.cpp"
         "driver_framebuffer_drawing.cpp"
         "driver_framebuffer_orientation.cpp"
         "driver_framebuffer_text.cpp"
         "driver_framebuffer_window.cpp"
         "fonts/font_ocra_22pt7b.c"
    INCLUDE_DIRS include
)
